[gd_scene load_steps=8 format=2]

[ext_resource path="res://Misc/Fonts/Neufreit-ExtraBold.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Screens/CharacterSelect/CharacterButton.gd" type="Script" id=2]
[ext_resource path="res://Game/Characters/Crab/WillSmith.png" type="Texture" id=3]


[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.133333, 0.133333, 0.133333, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.168627, 0.164706, 0.164706, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[node name="CharacterButton" type="PanelContainer"]
margin_right = 702.0
margin_bottom = 220.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 692.0
margin_bottom = 210.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Icon" type="TextureRect" parent="HBoxContainer"]
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
mouse_filter = 2
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Info" type="MarginContainer" parent="HBoxContainer"]
margin_left = 204.0
margin_right = 682.0
margin_bottom = 200.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Info"]
margin_right = 478.0
margin_bottom = 200.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="Name" type="Label" parent="HBoxContainer/Info/VBoxContainer"]
margin_right = 478.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
text = "Bruh"
align = 1
valign = 1

[node name="Description" type="Label" parent="HBoxContainer/Info/VBoxContainer"]
margin_top = 58.0
margin_right = 478.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 3 )
text = "DudeDudeDudeDudeDude"
align = 1

[node name="Info" type="HBoxContainer" parent="HBoxContainer/Info/VBoxContainer"]
margin_top = 98.0
margin_right = 478.0
margin_bottom = 200.0
mouse_filter = 2
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="Attack1" type="VBoxContainer" parent="HBoxContainer/Info/VBoxContainer/Info"]
margin_right = 104.0
margin_bottom = 102.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Title" type="Label" parent="HBoxContainer/Info/VBoxContainer/Info/Attack1"]
margin_right = 104.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
text = "Attack1"
align = 1

[node name="Info" type="Label" parent="HBoxContainer/Info/VBoxContainer/Info/Attack1"]
margin_top = 24.0
margin_right = 104.0
margin_bottom = 102.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "ddddddddddddddd"
align = 1
autowrap = true

[node name="Attack2" type="VBoxContainer" parent="HBoxContainer/Info/VBoxContainer/Info"]
margin_left = 124.0
margin_right = 228.0
margin_bottom = 102.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="HBoxContainer/Info/VBoxContainer/Info/Attack2"]
margin_right = 104.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
text = "Attack2"
align = 1

[node name="Info" type="Label" parent="HBoxContainer/Info/VBoxContainer/Info/Attack2"]
margin_top = 24.0
margin_right = 104.0
margin_bottom = 102.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
align = 1
autowrap = true

[node name="Ability1" type="VBoxContainer" parent="HBoxContainer/Info/VBoxContainer/Info"]
margin_left = 248.0
margin_right = 352.0
margin_bottom = 102.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Title" type="Label" parent="HBoxContainer/Info/VBoxContainer/Info/Ability1"]
margin_right = 104.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
text = "Ability1"
align = 1

[node name="Info" type="Label" parent="HBoxContainer/Info/VBoxContainer/Info/Ability1"]
margin_top = 24.0
margin_right = 104.0
margin_bottom = 102.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "dddddddddddddddd"
align = 1
autowrap = true

[node name="Ability2" type="VBoxContainer" parent="HBoxContainer/Info/VBoxContainer/Info"]
margin_left = 372.0
margin_right = 478.0
margin_bottom = 102.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Title" type="Label" parent="HBoxContainer/Info/VBoxContainer/Info/Ability2"]
margin_right = 106.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
text = "Ability2"
align = 1

[node name="Info" type="Label" parent="HBoxContainer/Info/VBoxContainer/Info/Ability2"]
margin_top = 24.0
margin_right = 106.0
margin_bottom = 102.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
align = 1
autowrap = true
[connection signal="gui_input" from="." to="." method="_on_CharacterButton_gui_input"]
